[package]
name = "dirsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.1.1"
bytes = "1.5.0"
h2 = "0.4.2"
http = "1.0.0"
log = "0.4.21"
rustls = "0.23.4"
rustls-native-certs = "0.7.0"
rustls-webpki = "0.102.2"
tokio = { version = "1.36.0", features = ["rt", "time", "net", "macros"] }
tokio-rustls = "0.26.0"
url = "2.5.0"
webpki-roots = "0.26.1"

[dependencies.simple_logger]
features = ["colors", "threads", "timestamps", "stderr"]